--- a/BlogProductCard/package.json
+++ b/BlogProductCard/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "build": "tailwindcss -i ./input.css -o ./output.css --minify"
+  },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.4",
     "tailwindcss": "^4.1.4"
